--- a/source/src/main/resources/templates/index2.html
+++ b/source/src/main/resources/templates/index2.html
@@ -40,13 +40,13 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
     <div class="container">
         <ul class="main-nav">
-            <li><a href="/">Ana Sayfa</a></li>
-            <li><a href="/announcements">Haberler</a></li>
-            <li><a href="/products">Ürünler</a></li>
-            <li class="small-logo"><a href="#header"><img src="img2/small-logo.png" alt=""/></a></li>
-            <li><a href="/producers">Üreticiler</a></li>
-            <li><a href="/bulletins">Bültenler</a></li>
-            <li><a href="/#contact">İletişim</a></li>
+            <li><a href="index">Anasayfa</a></li>
+            <li><a href="announcements">Haberler</a></li>
+            <li><a href="products">Ürünler</a></li>
+            <li class="small-logo"><a href="index"><img src="img2/small-logo.png" alt=""/></a></li>
+            <li><a href="producers">Üreticiler</a></li>
+            <li><a href="bulletins">Bülten</a></li>
+            <li><a href="admin">Yönetim</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
