--- a/source/src/main/resources/templates/transactions.html
+++ b/source/src/main/resources/templates/transactions.html
@@ -11,27 +11,27 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'/>
 
-    <link href="/css2/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/style.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/font-awesome.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/responsive.css" rel="stylesheet" type="text/css"/>
-    <link href="/css2/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/font-awesome.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/responsive.css" rel="stylesheet" type="text/css"/>
+    <link href="css2/animate.css" rel="stylesheet" type="text/css"/>
 
     <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
 
-    <script type="text/javascript" src="/js2/jquery.1.8.3.min.js"></script>
-    <script type="text/javascript" src="/js2/bootstrap.js"></script>
-    <script type="text/javascript" src="/js2/jquery-scrolltofixed.js"></script>
-    <script type="text/javascript" src="/js2/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="/js2/jquery.isotope.js"></script>
-    <script type="text/javascript" src="/js2/wow.js"></script>
-    <script type="text/javascript" src="/js2/classie.js"></script>
+    <script type="text/javascript" src="js2/jquery.1.8.3.min.js"></script>
+    <script type="text/javascript" src="js2/bootstrap.js"></script>
+    <script type="text/javascript" src="js2/jquery-scrolltofixed.js"></script>
+    <script type="text/javascript" src="js2/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js2/jquery.isotope.js"></script>
+    <script type="text/javascript" src="js2/wow.js"></script>
+    <script type="text/javascript" src="js2/classie.js"></script>
 
 
     <!--[if lt IE 9]>
-    <script src="/js2/respond-1.1.0.min.js"></script>
-    <script src="/js2/html5shiv.js"></script>
-    <script src="/js2/html5element.js"></script>
+    <script src="js2/respond-1.1.0.min.js"></script>
+    <script src="js2/html5shiv.js"></script>
+    <script src="js2/html5element.js"></script>
     <![endif]-->
 
 
@@ -40,13 +40,13 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
     <div class="container">
         <ul class="main-nav">
-            <li><a href="#header">Ana Sayfa</a></li>
-            <li><a href="#haberler">Haberler</a></li>
-            <li><a href="#Products">Ürünler</a></li>
-            <li class="small-logo"><a href="#header"><img src="/img2/small-logo.png" alt=""/></a></li>
-            <li><a href="#client">Üreticiler</a></li>
-            <li><a href="#team">Bültenler</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="index">Anasayfa</a></li>
+            <li><a href="announcements">Haberler</a></li>
+            <li><a href="products">Ürünler</a></li>
+            <li class="small-logo"><a href="index"><img src="img2/small-logo.png" alt=""/></a></li>
+            <li><a href="producers">Üreticiler</a></li>
+            <li><a href="bulletins">Bülten</a></li>
+            <li><a href="admin">Yönetim</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
@@ -84,7 +84,7 @@
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#"><img src="/img2/footer-logo.png" alt=""/></a></div>
+        <div class="footer-logo"><a href="#"><img src="img2/footer-logo.png" alt=""/></a></div>
         <span class="copyright">Copyright © 2014-2016 | BüKoop</span>
     </div>
     <!--
