--- a/source/src/main/resources/templates/announcements.html
+++ b/source/src/main/resources/templates/announcements.html
@@ -55,7 +55,7 @@
 
 <section class="main-section paddind" id="Products"><!--main-section-start-->
     <div class="container">
-        <h2>Duyurular</h2>
+        <h2>Haberler</h2>
         <h6>Kooperatifimizden duyurular.</h6>
     </div>
     <div class="producerContainer wow fadeInUp delay-04s" th:each="announcement : ${announcements}">
