--- a/source/src/main/resources/templates/products.html
+++ b/source/src/main/resources/templates/products.html
@@ -55,7 +55,7 @@
 
 <section class="main-section paddind" id="Products"><!--main-section-start-->
     <div class="container">
-        <h2>Products</h2>
+        <h2>Ürünler</h2>
         <h6>Üreticilerimizden taptaze ürünler.</h6>
         <div class="productFilter">
             <ul class="Product-nav wow fadeIn delay-02s">
